commiting html files

--- a/audio.html
+++ b/audio.html
@@ -1,65 +1,14 @@
-<html>
-
-<data>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Audio</title>
+</head>
 <body>
-
-<video src="C:\Users\Dell\Desktop\HTML\Abhishek.mp4" controls height="300px" width="150px"></video>
-
-<audio src="audio path" ></audio> 
-
-
-<h1>IPL 2023</h1>
-<table>
-    <thead>
-        <tr>
-            <th>Ranking</th>
-            <th>Teams</th> 
-            <th>Points</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>1</td>
-            <td>DC</td>
-            <td>16</td>
-            
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>RCB</td>
-            <td>14</td>
-        </tr>
-        <tr>
-            <td>3</td>
-            <td>MI</td>
-            <td>12</td>
-
-        </tr>
-
-
-    </tbody>
-
-</table>
-
-<!-- forms -->
-<form>
-    <label>First name</label> 
-    <input type="text">
-    <label>Last name</label> 
-    <input type="text"> <br>
-    <br>
-    <label>Contact no</label>
-    <input > <br>
-    <br>
-    <!-- another type -->
-    <input type="text" placeholder="First Name">
-</form>
-
-    
-
+    <audio controls>
+        <source src="C:\Users\Dell\Music\NEE_Amrutdare.mp3" type="audio/mpeg"
+    </audio>
 </body>
-
-</data>
-
 </html>
