--- a/index.html
+++ b/index.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Home</title>
+        <title>INDEX</title>
 
     </head>
     <body>
 
         <h4>Abhishek Nayak</h4>
 
-        <a href="Task13.html" target="_blank">Task</a> <br>
-        <a href="Video.html" target="_blank">Video</a> <br>
-        <a href="Email.html" target="_blank">Email</a> <br>
-        <a href="Youtube.html" target="_blank">Youtube</a> 
+        <a href="Task13.html">Task</a> <br>
+        <div>
+            <a href="audio.html">Audio</a>
+        </div>
+        <a href="Video.html" >Video</a> <br>
+        <a href="Email.html" >Email</a> <br>
+        <a href="Youtube.html" >Youtube</a> <br>
+        <a href="BoxSidebyside.html">Box side by side</a> 
+        <div>
+            <a href="Boxinsideabox.html">Boxn inside a Box</a>
+        </div>
+        <div>
+            <a href="CSSintroduction.html">Introduction</a>
+        </div>
+        
         
 
 
