commiting html files

--- a/Email.html
+++ b/Email.html
@@ -74,8 +74,12 @@
             }
          -->
 
-    <button>Submit </button>
+    <button type="submit">Register </button>
+    <button type="reset">Reset </button>
 
+         <!-- Bloch level element , new lie eg- div tag
+            Inline levek element , not creating new line eg- span tag
+        -->
     </form>
 </body>
 </html>
