--- a/Video.html
+++ b/Video.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <video src="C:\Users\Dell\Desktop\HTML\civilian 1648914609614.mp4" controls height="300px" width="150px"></video>
+    <video src="civilian 1648914609614.mp4" controls height="300px" width="150px"></video>
 </body>
 </html>
