--- a/audio.html
+++ b/audio.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <audio controls>
-        <source src="C:\Users\Dell\Music\NEE_Amrutdare.mp3" type="audio/mpeg"
+        <source src="NEE_Amrutdare.mp3" type="audio/mpeg"
     </audio>
 </body>
 </html>
